[package]
name = "kontrolleurs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
regex = "1"
signal-hook = "0"
termion = "3"
termwiz = { git = "https://github.com/wez/wezterm.git", rev = "7e8fdc118d2d7ceb51c720a966090f6cb65089b7" }
